# human-ids

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: pipeline.yml
cli/: Cargo.toml  build.rs
cli/.cargo/: config.toml
cli/src/: cli.rs  main.rs
lib/: Cargo.toml
lib/.cargo/: config.toml
lib/benches/: benchmark.rs
lib/src/: constants.rs  lib.rs
src/: cli.rs  lib.rs  main.rs
