[package]
name = "human-ids"
version = "0.1.0"
edition = "2021"

[lib]
name = "human_ids"
path = "src/lib.rs"

[[bin]]
name = "human-ids"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.7", features = ["derive", "cargo", "env"] }
clap_complete = "4.4.4"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[build-dependencies]
clap = { version = "4.4.7", features = ["derive", "cargo", "env"] }
clap_complete = "4.4.4"
clap_mangen = "0.2.15"
