[package]
name = "human-ids-bin"
authors = ["Sondre Aasemoen <sondre@eons.io>"]
description = "Generate human-readable IDs"
documentation = "https://docs.rs/human_ids"
homepage = "https://github.com/sondr3/human-ids"
repository = "https://github.com/sondr3/human-ids"
license = "MIT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "human-ids"
doc = false
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.7", features = [ "derive", "cargo", "env", ] }
clap_complete = { version = "4.4.4" }
human_ids = { version = "0", path = "../lib" }

[build-dependencies]
clap = { version = "4.4.7", features = ["derive", "cargo", "env"] }
clap_complete = "4.4.4"
clap_mangen = "0.2.15"