[package]
name = "human_ids"
authors = [
    "Sondre Aasemoen <sondre@eons.io>",
    "cainthebest <https://github.com/cainthebest>",
]
description = "Generate human-readable IDs"
documentation = "https://docs.rs/human_ids"
homepage = "https://github.com/sondr3/human-ids"
repository = "https://github.com/sondr3/human-ids"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
fastrand = "2.0.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
